

2017-04-27  F. <>
    * Pressure cell
    * Erlenmeyer Flask
    * Initial support for sounds
    * New machines: filler, centrifuge, and electorlyzer
    * Recipes reader improved
    * Fix some crash

2017-04-24  F. <>
    * Unify energy, wrapper around forge (for items)
    * Send fluid nbt data to client when interface is open
    * Fix potato battery
    * Deprecate addAmount to ElementContainer to specify Entity, check if crit. mass reached
    * Add chem. furn. JEI integration
    * Refactoring Element
    * Xml Recipes

2017-04-23  F. <>
    * KernCraft is in a decent state
    * Some basic way to have machines
    * Some basic way to have elements
    * Some basic manual feature
    * Some useful item: detector, lamp, time machine and portable beacon