@@ -1,12 +1,12 @@
 package com.R3DKn16h7.kerncraft.items;
 
-import net.minecraft.client.Minecraft;
-import net.minecraft.creativetab.CreativeTabs;
+import com.R3DKn16h7.kerncraft.KernCraft;
+import com.R3DKn16h7.kerncraft.blocks.KernCraftBlocks;
+import com.R3DKn16h7.kerncraft.utils.PlayerHelper;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.util.ActionResult;
 import net.minecraft.util.EnumActionResult;
 import net.minecraft.util.EnumFacing;
@@ -25,33 +25,16 @@ public class TestItem extends Item {
 
         this.setUnlocalizedName(base_name);
         this.setRegistryName(base_name);
-        this.setCreativeTab(CreativeTabs.MISC);
+        this.setCreativeTab(KernCraft.KERNCRAFT_CREATIVE_TAB);
         GameRegistry.register(this);
     }
 
     @Override
-    public ActionResult<ItemStack> onItemRightClick( World worldIn,
+    public ActionResult<ItemStack> onItemRightClick(World worldIn,
                                                     EntityPlayer playerIn,
                                                     EnumHand hand) {
-        ItemStack stack = playerIn.getHeldItem(hand);
-        NBTTagCompound nbt;
-        if (stack.hasTagCompound()) {
-            nbt = stack.getTagCompound();
-        } else {
-            nbt = new NBTTagCompound();
-        }
 
-        if (nbt.hasKey("Uses")) {
-
-            int c = 1;
-            if (playerIn.isSneaking()) c = -1;
-            nbt.setInteger("Uses", nbt.getInteger("Uses") + c);
-        } else {
-            nbt.setInteger("Uses", 1);
-        }
-        stack.setTagCompound(nbt);
-
-        return new ActionResult<ItemStack>(EnumActionResult.PASS, stack);
+        return new ActionResult<ItemStack>(EnumActionResult.PASS, playerIn.getHeldItem(hand));
     }
 
     @Override
@@ -61,32 +44,29 @@ public class TestItem extends Item {
                                       EnumHand hand,
                                       EnumFacing facing,
                                       float hitX, float hitY, float hitZ) {
-        ItemStack stack = playerIn.getHeldItem(hand);
-        NBTTagCompound nbt;
-        nbt = stack.getTagCompound();
-        if (nbt != null && nbt.hasKey("Uses")) {
-            int e = nbt.getInteger("Uses");
-            Minecraft.getMinecraft().player.sendChatMessage("setEntityState" + String.format("%d", e));
-            worldIn.setEntityState(playerIn, (byte) e);
-        }
-
-        worldIn.setWorldTime(0);
+//        ItemStack stack = playerIn.getHeldItem(hand);
 
         return super.onItemUse(playerIn, worldIn, pos, hand, facing, hitX, hitY, hitZ);
+    }
+
+    @Override
+    public void onUpdate(ItemStack stack, World worldIn,
+                         Entity entityIn, int itemSlot, boolean isSelected) {
+        BlockPos pos = entityIn.getPosition();
+        pos = pos.add(0, PlayerHelper.isCtrlKeyDown() ? -2 : -1, 0);
+        if (!PlayerHelper.isShiftDown() && worldIn.isAirBlock(pos)) {
+
+//            worldIn.getBlockState(pos))
+            worldIn.setBlockState(pos, KernCraftBlocks.TEST_BLOCK.getDefaultState());
+        }
+
+        super.onUpdate(stack, worldIn, entityIn, itemSlot, isSelected);
     }
 
     @Override
     public boolean onLeftClickEntity(ItemStack stack,
                                      EntityPlayer player,
                                      Entity entity) {
-        NBTTagCompound nbt;
-        nbt = stack.getTagCompound();
-        if (nbt != null && nbt.hasKey("Uses")) {
-            int e = nbt.getInteger("Uses");
-            Minecraft.getMinecraft().player.sendChatMessage("setEntityState" + String.format("%d", e));
-            Minecraft.getMinecraft().world.setEntityState(entity, (byte) e);
-        }
-
         return true;
     }
 
@@ -94,8 +74,6 @@ public class TestItem extends Item {
     @SuppressWarnings({"unchecked", "rawtypes"})
     @Override
     public void addInformation(ItemStack stack, EntityPlayer player, List lores, boolean b) {
-        if (stack.hasTagCompound() && stack.getTagCompound().hasKey("Uses")) {
-            lores.add(Integer.toString(stack.getTagCompound().getInteger("Uses")));
-        }
+
     }
 }
