@@ -1,10 +1,13 @@
 
+    * Fixed JEI recipes
+    * FIX: crash when Tesla was missing
+    * Miron fixes and improvements
 
 2017-04-27  F. <>
     * Pressure cell
     * Erlenmeyer Flask
     * Initial support for sounds
-    * New machines: filler, centrifuge, and electorlyzer
+    * New machines: Filler, Centrifuge, and Electorlyzer
     * Recipes reader improved
     * Fix some crash
 
